fix for offset showing on mobile

--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -85,4 +85,7 @@
   .sidebar-root {
     display: none !important;
   }
+  .card-container-offset{
+      display: none !important;
+  }
 }
